*scour-0.37
::gentoo		base ebuild
::prototype99	improve python use flags,add pypy support