@@ -1,4 +1,5 @@
 DIST scour-0.37.tar.gz 95478 BLAKE2B f3037b691b110f84266c742ac1212a8069e0ac1260f818610dfecc7ee64a257d9e0772c7c675e4062286cf4b719fe48782c416a0cb85a136ea315b22da58c460 SHA512 ffc9bd33eec038126d781dac50c89e4275d0d5e14ec2b2247a7727af91ac2ffe5522c69b5386f75df67a0b88f8ed62cb6a2ad47d600e55b123d937ba33e9e501
+EBUILD scour-0.37-r1.ebuild 723 BLAKE2B c484e771bc0be0bea8888d9a6e6c029c4c1c9d4f2caa3473ec08011ddf814bd19242773ffb42250c10140639a40a65c0000c2c25a839b69e7c65f55b311c1209 SHA512 d24d6123fefabe5c49746311b94fc2230781d50cca27ac953f4deb841c232e2f2a5b103342b48df22bde4049466d2d96804b4cbc8d3e985ae1caf52d4b509eb8
 EBUILD scour-0.37.ebuild 720 BLAKE2B 8a3844adf08a4720b8bd733e2094626c4a3d0d9ba8bc6fd9dfa5aed737769d503bc0ea823b848c0cef19ccfbdef770e2b08803612ad8b782420c35df519cff25 SHA512 db4fc079fba9fc6bd46ccb8822c9e8c123c079b2cf3f8f02c18b17d8931506aed67ffb7afee27fb5a234664fb10dc1224e2e6e3d3b110706b7dcbe88e47bf28b
-MISC ChangeLog 89 BLAKE2B 58ba328ef7c50410843d70dcec0099ae71306806f3089919fdb9fed99da2580fbd9e7cffc06800b24957d1e6ca7e8af107ad4685c9cbb96a11d584313f6d5db5 SHA512 e373fa1ef2b00c09482aca5fcc76d6e45c3a46ad175b58d8540d3d121feb7edf1aba184efe15cdab2e5ef420ae928e86a96b2574b560773a2edda87bf94e294f
+MISC ChangeLog 152 BLAKE2B 2f989b75a701b0f3379de2e99e50a385ada8a1fa059c341e6742423acf7ef70a7561db4b1316f8c2936bf385dbe81a2f79bae1005e41a0589c0067429ddb8e91 SHA512 d3ecb5d37f1c21343c189afcd4ba72e91cd69558943807cc6324627a0f32ac53d513cd4b318438c52d22c348ea216363a6c7f39515bc59ff7032861da89414a9
 MISC metadata.xml 265 BLAKE2B 5e9da641ca1949fb00cecaed654cfc3cad540c14b19043c2032e2c6593d47793d6ad7ee461667575ee51a919890ff1ec63195a43c2a35c8b56c12257668fa2b5 SHA512 65fd64249e8dde8eb2ddcb67c58c05b36b10e51956e2237f60dd3ae50872492f3d5872b64106acb13e453a41960f4f817161be3c8b89e6b9a2367b8f1403ffaf
