@@ -1,0 +1,25 @@
+# Copyright 1999-2020 Gentoo Authors
+# Distributed under the terms of the GNU General Public License v2
+
+EAPI=7
+
+PYTHON_COMPAT=( py{py{,3},thon{2_7,3_{5..8}}} )
+DISTUTILS_USE_SETUPTOOLS=rdepend
+inherit distutils-r1
+
+DESCRIPTION="Take an SVG file and produce a cleaner and more concise file"
+HOMEPAGE="https://github.com/scour-project/scour"
+SRC_URI="https://github.com/scour-project/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="amd64 ~arm arm64 ~hppa ~ia64 ppc ppc64 ~s390 ~sparc x86"
+IUSE=""
+
+RDEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
+	dev-python/six[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}"
+
+python_test() {
+	"${EPYTHON}" testscour.py -v || die "Tests fail with ${EPYTHON}"
+}
